--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -9,13 +9,22 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
   setupNodeJS:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
+    - uses: actions/checkout@v6.2.0
     - name: Set up Node.js environment
       uses: actions/setup-node@v6.2.0
+      with:
+        node-version: v6.2.0
+        cache: 'npm'
+    - name: Install npm dependencies
+      run: npm install
+    - name: Install yarn dependencies
+      run: yarn
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
