--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Node.js environment
       uses: actions/setup-node@v6.2.0
       with:
-        node-version: v6.2.0
+        node-version: 6.2.0
         cache: 'npm'
     - name: Install npm dependencies
       run: npm install
