--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -15,9 +15,9 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@v6.2.0
+    - uses: actions/checkout@6.2.0
     - name: Set up Node.js environment
-      uses: actions/setup-node@v6.2.0
+      uses: actions/setup-node@6.2.0
       with:
         node-version: 6.2.0
         cache: 'npm'
