--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -15,11 +15,11 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@6.2.0
+    - uses: actions/checkout@v4
     - name: Set up Node.js environment
-      uses: actions/setup-node@6.2.0
+      uses: actions/setup-node@v4
       with:
-        node-version: 6.2.0
+        node-version: v4
         cache: 'npm'
     - name: Install npm dependencies
       run: npm install
