--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: v4
-        cache-dependency-path: package-lock.json
+        cache-dependency-path: ${GITHUB_WORKSPACE}/package-lock.json
         cache: 'npm'
     - name: Install npm dependencies
       run: npm install
