--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,8 +24,8 @@ jobs:
         cache: 'npm'
     - name: Install npm dependencies
       run: npm install
-    - name: Install yarn dependencies
-      run: yarn
+    # - name: Install yarn dependencies
+    #  run: yarn
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
