--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cardinfinity403",
   "version": "1.0.0",
-  "description": "package files for Card Infinity",
+  "description": "Card Infinity project package",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
