--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -13,13 +13,17 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x, 22.x]
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@v4
     - name: Set up Node.js environment
       uses: actions/setup-node@v4
       with:
-        node-version: v4
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Install npm dependencies
       run: npm install
