--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "git+https://github.com/eleanorlynch/CardInfinity403.git"
   },
   "author": "eleanorlynch",
+  "type": "module", 
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/eleanorlynch/CardInfinity403/issues"
