--- a/.nycrc
+++ b/.nycrc
@@ -1,1 +1,9 @@
-"" 
+{
+    "all": true,
+    "exclude": ["test"],
+    "output": "reports",
+    "reporter" : [
+        "html",
+        "text"
+    ]
+}
