--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha"
+    "coverage": "c8 report" 
   },
   "repository": {
     "type": "git",
