--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/eleanorlynch/CardInfinity403#readme",
   "devDependencies": {
-    "mocha": "^11.3.0"
+    "mocha": "^11.3.0",
     "c8": "^10.1.3"
   }
 }
