--- a/.nycrc
+++ b/.nycrc
@@ -1,9 +1,13 @@
 {
     "all": true,
-    "exclude": ["test"],
+    "exclude": ["test", "StatusReports", ".github/workflows"],
     "output": "reports",
     "reporter" : [
         "html",
         "text"
     ]
+    "lines": 80,
+    "branches": 80,
+    "statements": 80,
+    "functions": 80
 }
