--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,5 +31,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
-    - run: npm run coverage
+    - name: Run tests
+      run: npm test
+    - name: Check test code coverage (goal 80%)
+      run: npm run coverage
