--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/eleanorlynch/CardInfinity403#readme",
   "devDependencies": {
+    "@types/chai": "^5.2.3",
     "@types/mocha": "^10.0.10",
     "c8": "^10.1.3",
+    "chai": "^6.2.2",
     "mocha": "^11.3.0",
     "typescript": "^5.9.3"
   }
