--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,5 +1,6 @@
 {
   "extension": ["ts"],
   "reporter": "spec",
-  "spec": ["test/**/*.ts"]
+  "spec": ["test/**/*.ts"],
+  "loader": "ts-node/esm"
 }
