--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "module": "nodenext",
     "target": "esnext",
     "types": [],
+
+    "moduleResolution": "NodeNext",
+    "allowImportingTsExtensions": true,
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
@@ -40,5 +43,7 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
+
+    
   }
 }
