--- a/phaser-multiplayer-template/packages/server/package.json
+++ b/phaser-multiplayer-template/packages/server/package.json
@@ -17,6 +17,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "@colyseus/monitor": "^0.16.0",
     "@colyseus/schema": "^3.0.0",
