Made the files comply with typescript

--- a/phaser-multiplayer-template/packages/server/tsconfig.json
+++ b/phaser-multiplayer-template/packages/server/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
       "outDir": "dist",
       "target": "es6",
-      "module": "commonjs",
+      "module": "nodenext",
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
