--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/chai": "^5.2.3",
     "@types/mocha": "^10.0.10",
+    "@types/node": "^25.2.3",
     "c8": "^10.1.3",
     "chai": "^6.2.2",
     "mocha": "^11.3.0",
